src/test/deca/context/invalid/class/25_methodBodyIncorrect2.deca
/* Description:
    test invalide avec une méthode normal




    Historique:
      cree le 18/01/2020
*/

   class A {
    float y;

      int printH () {
        return this.y;
      }

   }
